kubernetes-ckad-exam-1/redis-label.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: msg
  name: messaging
spec:
  containers:
  - image: redis:alpine
    name: messaging
  dnsPolicy: ClusterFirst
  restartPolicy: Always

kubectl expose deploy redis --name messaging-service --port 6379 -n marketing

kubectl create cm cm-3392845  --from-literal=DB_NAME=SQL3322 --from-literal=DB_HOST=sql322.mycompany.com --from-literal=DB_PORT=3306

kubectl create secret generic db-secret-xxdf --from-literal=DB_Host=sql01 --from-literal=DB_User=root --from-literal=DB_Password=password123
