kubernetes-ckad-exam-1/networkpolicy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
          - containerPort: 6379

kubectl expose deploy redis --port 6379 --name redis --type ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes: 
  - Ingress
  ingress:
   - from:
      - podSelector:
          matchLabels:
            access: redis
